--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>My future CV</h1>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
   </body>
 </html>
