--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div class="header__content">
         <nav class="header__nav nav">
           <ul class="nav__list">
-            <li class="nav__item item">About</li>
-            <li class="nav__item item">Contacts</li>
-            <li class="nav__item item">Skills</li>
-            <li class="nav__item item">Experience</li>
-            <li class="nav__item item">Education</li>
-            <li class="nav__item item">Code</li>
+            <li class="nav__item item"><a href="#about">About</a></li>
+            <li class="nav__item item"><a href="#contacts">Contacts</a></li>
+            <li class="nav__item item"><a href="#skills">Skills</a></li>
+            <li class="nav__item item"><a href="#experience">Experience</a></li>
+            <li class="nav__item item"><a href="#education">Education</a></li>
+            <li class="nav__item item"><a href="#code">Code</a></li>
           </ul>
         </nav>
         <div class="header__info info">
@@ -38,7 +38,7 @@
     </header>
     <main class="main">
       <aside class="aside">
-        <section class="education">
+        <section class="education" id="education">
           <h2 class="education__title title"><span class="title_underline">Education</span></h2>
           <ul class="education__list list">
             <li class="education__item item">
@@ -50,7 +50,7 @@
             </li>
           </ul>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
           <h2 class="skills__title title"><span class="title_underline">Skills</span></h2>
           <p class="skills__description description"></p>
           <ul class="skills__list list">
@@ -61,7 +61,7 @@
             <li class="skills__item item"><img class="skills__logo" src="assets/icons/git.png" alt="git" /> Git</li>
           </ul>
         </section>
-        <section class="contacts">
+        <section class="contacts" id="contacts">
           <h2 class="contacts__title title"><span class="title_underline">Contacts</span></h2>
           <ul class="contacts__list list">
             <li class="contacts__item item"><strong>&nbsp&nbspLocation</strong>: Enerhodar, Ukraine</li>
@@ -72,7 +72,7 @@
         </section>
       </aside>
       <div class="main-information">
-        <section class="about">
+        <section class="about" id="about">
           <h2 class="about__title title"><span class="title_underline">About Me</span></h2>
           <p class="about__description description">
             &nbsp&nbsp&nbspGraduated from the Odessa National Polytechnic University with a degree in Nuclear Energy. I am currently working
@@ -80,7 +80,7 @@
             knowledge in front-end development.
           </p>
         </section>
-        <section class="code-example">
+        <section class="code-example" id="code">
           <h2 class="code-example__title title"><span class="title_underline">Code Example</span></h2>
           <p class="code-example__description description">
             &nbsp&nbsp&nbspWrite a function that takes in a string of one or more words, and returns the same string, but with all five or
@@ -94,7 +94,7 @@
           <h3 class="code-example__solution solution">My Solution:</h3>
           <img class="solution__image" src="assets/img/code-example.png" alt="solution" width="90%" />
         </section>
-        <section class="experience">
+        <section class="experience" id="experience">
           <h2 class="experience__title title"><span class="title_underline">Experience</span></h2>
           <p class="experience__description description">Not yet...</p>
         </section>
