fix: validator errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <div class="header__avatar">
-        <img src="assets/img/MAKSYMKUZMYCH.JPG" alt="photo" width="100%" height="100%" />
+        <img class="avatar" src="assets/img/MAKSYMKUZMYCH.JPG" alt="photo" />
       </div>
       <div class="header__content">
         <nav class="header__nav nav">
@@ -42,10 +42,10 @@
           <h2 class="education__title title"><span class="title_underline">Education</span></h2>
           <ul class="education__list list">
             <li class="education__item item">
-              <strong>&nbsp&nbspUniversity</strong>: Odessa National Polytechnic University, Nuclear power master
+              <strong>&nbsp &nbsp University</strong>: Odessa National Polytechnic University, Nuclear power master
             </li>
             <li class="education__item item">
-              <strong>&nbsp&nbspCourses</strong>: <a href="https://foxminded.ua/front-end">Foxminded Front-End Course (Angular)</a
+              <strong>&nbsp &nbsp Courses</strong>: <a href="https://foxminded.ua/front-end">Foxminded Front-End Course (Angular)</a
               ><img class="education__certificate" src="assets/img/certificate.png" alt="certificate" />
             </li>
           </ul>
@@ -64,10 +64,10 @@
         <section class="contacts" id="contacts">
           <h2 class="contacts__title title"><span class="title_underline">Contacts</span></h2>
           <ul class="contacts__list list">
-            <li class="contacts__item item"><strong>&nbsp&nbspLocation</strong>: Enerhodar, Ukraine</li>
-            <li class="contacts__item item"><strong>&nbsp&nbspPhone</strong>: +380957207601</li>
-            <li class="contacts__item item"><strong>&nbsp&nbspEmail</strong>: kuzmichmaksym1997@gmail.com</li>
-            <li class="contacts__item item"><strong>&nbsp&nbspGitHub</strong>: MaksymKuzmych</li>
+            <li class="contacts__item item"><strong>&nbsp &nbsp Location</strong>: Enerhodar, Ukraine</li>
+            <li class="contacts__item item"><strong>&nbsp &nbsp Phone</strong>: +380957207601</li>
+            <li class="contacts__item item"><strong>&nbsp &nbsp Email</strong>: kuzmichmaksym1997@gmail.com</li>
+            <li class="contacts__item item"><strong>&nbsp &nbsp GitHub</strong>: MaksymKuzmych</li>
           </ul>
         </section>
       </aside>
@@ -75,24 +75,24 @@
         <section class="about" id="about">
           <h2 class="about__title title"><span class="title_underline">About Me</span></h2>
           <p class="about__description description">
-            &nbsp&nbsp&nbspGraduated from the Odessa National Polytechnic University with a degree in Nuclear Energy. I am currently working
-            at a Nuclear Power Plant. I think that my real work will someday lead me to stagnation. That's why I'm here. My goal is to gain
-            knowledge in front-end development.
+            &nbsp &nbsp &nbsp Graduated from the Odessa National Polytechnic University with a degree in Nuclear Energy. I am currently
+            working at a Nuclear Power Plant. I think that my real work will someday lead me to stagnation. That's why I'm here. My goal is
+            to gain knowledge in front-end development.
           </p>
         </section>
         <section class="code-example" id="code">
           <h2 class="code-example__title title"><span class="title_underline">Code Example</span></h2>
           <p class="code-example__description description">
-            &nbsp&nbsp&nbspWrite a function that takes in a string of one or more words, and returns the same string, but with all five or
-            more letter words reversed (Just like the name of this Kata). Strings passed in will consist of only letters and spaces. Spaces
-            will be included only when more than one word is present.
+            &nbsp &nbsp &nbsp Write a function that takes in a string of one or more words, and returns the same string, but with all five
+            or more letter words reversed (Just like the name of this Kata). Strings passed in will consist of only letters and spaces.
+            Spaces will be included only when more than one word is present.
           </p>
           <p class="code-example__description description">
-            &nbsp&nbsp&nbspExamples: <br />spinWords( “Hey fellow warriors” ) => returns “Hey wollef sroirraw” <br />spinWords( “This is a
-            test”) => returns “This is a test” <br />spinWords( “This is another test” )=> returns “This is rehtona test”
+            &nbsp &nbsp &nbsp Examples: <br />spinWords( “Hey fellow warriors” ) => returns “Hey wollef sroirraw” <br />spinWords( “This is
+            a test”) => returns “This is a test” <br />spinWords( “This is another test” )=> returns “This is rehtona test”
           </p>
           <h3 class="code-example__solution solution">My Solution:</h3>
-          <img class="solution__image" src="assets/img/code-example.png" alt="solution" width="90%" />
+          <img class="solution__image" src="assets/img/code-example.png" alt="solution" />
         </section>
         <section class="experience" id="experience">
           <h2 class="experience__title title"><span class="title_underline">Experience</span></h2>
@@ -110,10 +110,10 @@
     </main>
     <footer class="footer">
       <a class="footer__github-link" href="https://github.com/MaksymKuzmych"
-        ><img class="footer__img" src="assets/icons/github-footer.png" alt="github" class="github-link"
+        ><img class="footer__img github-link" src="assets/icons/github-footer.png" alt="github"
       /></a>
       <a class="footer__rsschool-link" href="https://rs.school/js"
-        ><img class="footer__img" src="https://rs.school/images/rs_school_js.svg" alt="rs-school" class="github-link" width="150px"
+        ><img class="footer__img github-link" src="https://rs.school/images/rs_school_js.svg" alt="rs-school"
       /></a>
       <span class="footer__date">Created <br />in 2022</span>
     </footer>
