--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="header">
       <div class="header__avatar">
-        <img class="avatar" src="assets/img/MAKSYMKUZMYCH.JPG" alt="photo" />
+        <img class="avatar" src="assets/img/MAKSYMKUZMYCH.JPG" alt="photo" width="100%" height="100%" />
       </div>
       <div class="header__content">
         <nav class="header__nav nav">
