fix: edit style mistakes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="header__info info">
           <h1 class="info__title title">Maksym Kuzmych</h1>
-          <h2 class="info__description description">Almost Front-End Developer</h2>
+          <h2 class="info__description description">Front-End Developer</h2>
         </div>
       </div>
     </header>
@@ -42,10 +42,10 @@
           <h2 class="education__title title"><span class="title_underline">Education</span></h2>
           <ul class="education__list list">
             <li class="education__item item">
-              <strong>&nbsp &nbsp University</strong>: Odessa National Polytechnic University, Nuclear power master
+              <strong>University</strong>: Odessa National Polytechnic University, Nuclear power master
             </li>
             <li class="education__item item">
-              <strong>&nbsp &nbsp Courses</strong>: <a href="https://foxminded.ua/front-end">Foxminded Front-End Course (Angular)</a
+              <strong>Courses</strong>: <a href="https://foxminded.ua/front-end">Foxminded Front-End Course (Angular)</a
               ><img class="education__certificate" src="assets/img/certificate.png" alt="certificate" />
             </li>
           </ul>
@@ -56,18 +56,24 @@
           <ul class="skills__list list">
             <li class="skills__item item"><img class="skills__logo" src="assets/icons/html5.png" alt="html" /> HTML</li>
             <li class="skills__item item"><img class="skills__logo" src="assets/icons/css3.png" alt="css" /> CSS</li>
-            <li class="skills__item item"><img class="skills__logo" src="assets/icons/js.png" alt="js" /> JavaScript</li>
-            <li class="skills__item item"><img class="skills__logo" src="assets/icons/angular.png" alt="angular" /> Angular</li>
+            <li class="skills__item item">
+              <img class="skills__logo" src="assets/icons/js.png" alt="js" /> JavaScript
+            </li>
+            <li class="skills__item item">
+              <img class="skills__logo" src="assets/icons/angular.png" alt="angular" /> Angular
+            </li>
             <li class="skills__item item"><img class="skills__logo" src="assets/icons/git.png" alt="git" /> Git</li>
           </ul>
         </section>
         <section class="contacts" id="contacts">
           <h2 class="contacts__title title"><span class="title_underline">Contacts</span></h2>
           <ul class="contacts__list list">
-            <li class="contacts__item item"><strong>&nbsp &nbsp Location</strong>: Enerhodar, Ukraine</li>
-            <li class="contacts__item item"><strong>&nbsp &nbsp Phone</strong>: +380957207601</li>
-            <li class="contacts__item item"><strong>&nbsp &nbsp Email</strong>: kuzmichmaksym1997@gmail.com</li>
-            <li class="contacts__item item"><strong>&nbsp &nbsp GitHub</strong>: MaksymKuzmych</li>
+            <li class="contacts__item item"><strong>Location</strong>: Enerhodar, Ukraine</li>
+            <li class="contacts__item item"><strong>Phone</strong>: +380957207601</li>
+            <li class="contacts__item item"><strong>Email</strong>: kuzmichmaksym1997@gmail.com</li>
+            <li class="contacts__item item">
+              <strong>GitHub</strong>: <a class="github-link" href="https://github.com/MaksymKuzmych">MaksymKuzmych</a>
+            </li>
           </ul>
         </section>
       </aside>
@@ -75,21 +81,22 @@
         <section class="about" id="about">
           <h2 class="about__title title"><span class="title_underline">About Me</span></h2>
           <p class="about__description description">
-            &nbsp &nbsp &nbsp Graduated from the Odessa National Polytechnic University with a degree in Nuclear Energy. I am currently
-            working at a Nuclear Power Plant. I think that my real work will someday lead me to stagnation. That's why I'm here. My goal is
-            to gain knowledge in front-end development.
+            Graduated from the Odessa National Polytechnic University with a degree in Nuclear Energy. I am currently
+            working at a Nuclear Power Plant. I think that my real work will someday lead me to stagnation. That's why
+            I'm here. My goal is to gain knowledge in front-end development.
           </p>
         </section>
         <section class="code-example" id="code">
           <h2 class="code-example__title title"><span class="title_underline">Code Example</span></h2>
           <p class="code-example__description description">
-            &nbsp &nbsp &nbsp Write a function that takes in a string of one or more words, and returns the same string, but with all five
-            or more letter words reversed (Just like the name of this Kata). Strings passed in will consist of only letters and spaces.
-            Spaces will be included only when more than one word is present.
+            Write a function that takes in a string of one or more words, and returns the same string, but with all five
+            or more letter words reversed. Strings passed in will consist of only letters and spaces. Spaces will be
+            included only when more than one word is present.
           </p>
           <p class="code-example__description description">
-            &nbsp &nbsp &nbsp Examples: <br />spinWords( “Hey fellow warriors” ) => returns “Hey wollef sroirraw” <br />spinWords( “This is
-            a test”) => returns “This is a test” <br />spinWords( “This is another test” )=> returns “This is rehtona test”
+            Examples: <br />spinWords( “Hey fellow warriors” ) => returns “Hey wollef sroirraw” <br />spinWords( “This
+            is a test”) => returns “This is a test” <br />spinWords( “This is another test” )=> returns “This is rehtona
+            test”
           </p>
           <h3 class="code-example__solution solution">My Solution:</h3>
           <img class="solution__image" src="assets/img/code-example.png" alt="solution" />
@@ -102,8 +109,10 @@
           <h2 class="languages__title title"><span class="title_underline">Languages</span></h2>
           <ul class="languages__list list">
             <li class="languages__item item"><strong>Russian</strong> - native speaker</li>
-            <li class="languages__item item"><strong>Ukrainian</strong>- native speaker</li>
-            <li class="languages__item item"><strong>English</strong> - B1 (Intermediate) => B2 (Upper-Intermediate)</li>
+            <li class="languages__item item"><strong>Ukrainian</strong> - native speaker</li>
+            <li class="languages__item item">
+              <strong>English</strong> - B1 (Intermediate) => B2 (Upper-Intermediate)
+            </li>
           </ul>
         </section>
       </div>
@@ -115,7 +124,7 @@
       <a class="footer__rsschool-link" href="https://rs.school/js"
         ><img class="footer__img github-link" src="https://rs.school/images/rs_school_js.svg" alt="rs-school"
       /></a>
-      <span class="footer__date">Created <br />in 2022</span>
+      <span class="footer__date">Created<br />in 2022</span>
     </footer>
   </body>
 </html>
